--- a/style.css
+++ b/style.css
@@ -123,6 +123,14 @@ body{
     height: 50px;
     margin-bottom: 10%;
     cursor: pointer;
+    margin-top: 120px;
+    transition: 0.3s all;
+}
+
+.btn-copiar:hover{
+    color: white;
+    background-color: #0A3871;
+    box-shadow: 1px 1px 6px black;
 }
 
 .rodape{
